<resources>
    <string name="app_name">Tile Shade</string>
    <string name="mode_standard">Play Standard Mode!</string>
    <string name="mode_advanced">Play Advanced Mode!</string>
    <string name="mode_expert">Play Expert Mode!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="spot_it">Spot It!</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="level_label">Level:</string>
    <string name="score_label">Score:</string>
    <string name="time_label">Time:</string>
    <string name="game_over_text">Game Over!</string>
    <string name="game_instructions">Find the different colored shape.</string>
    <string name="play">Play!</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="final_score_label">Your Score:</string>
    <string name="new_high_score">New High Score!</string>
    <string name="high_score_label">High Score:</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="start_over">Start Over</string>
    <string name="pause">Pause</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="go">Go!</string>
    <string name="quit">Quit</string>
    <string name="tile_shade">Tile Shade</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_settings">Settings</string>
</resources>
