<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" 
    tools:context=".MainActivityFragment">

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="@dimen/icon_spotit_width"
        android:layout_height="@dimen/icon_spotit_height"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/icon_spotit_margin_bottom"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_icon"
        android:layout_centerHorizontal="true"
        android:text="@string/game_instructions"
        android:textSize="@dimen/instructions_text_size"
        android:layout_margin="@dimen/instructions_margins"/>

    <Button
        android:id="@+id/btn_mode_standard"
        android:layout_width="@dimen/mode_button_width"
        android:layout_height="@dimen/mode_button_height"
        android:layout_marginBottom="@dimen/mode_button_margin_bottom"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/instructions"
        android:text="@string/play"
        android:textStyle="bold"
        android:textSize="@dimen/mode_button_text_size"/>

    <Button
        android:id="@+id/btn_mode_advanced"
        android:layout_width="@dimen/mode_button_width"
        android:layout_height="@dimen/mode_button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/mode_button_margin_bottom"
        android:layout_below="@id/btn_mode_standard"
        android:text="@string/mode_advanced"
        android:textStyle="bold"
        android:textSize="@dimen/mode_button_text_size"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_mode_expert"
        android:layout_width="@dimen/mode_button_width"
        android:layout_height="@dimen/mode_button_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_mode_advanced"
        android:text="@string/mode_expert"
        android:textStyle="bold"
        android:textSize="@dimen/mode_button_text_size"
        android:visibility="gone"/>

</RelativeLayout>
