<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/board">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/game_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/game_pause"
            android:layout_width="@dimen/mode_button_width"
            android:layout_height="@dimen/mode_button_height"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/game_btn_margin"
            android:text="@string/pause"
            android:textStyle="bold"
            android:textSize="@dimen/mode_button_text_size"/>

        <Button
            android:id="@+id/game_reset"
            android:layout_width="@dimen/mode_button_width"
            android:layout_height="@dimen/mode_button_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/game_pause"
            android:layout_marginBottom="@dimen/game_btn_margin"
            android:text="@string/start_over"
            android:textStyle="bold"
            android:textSize="@dimen/mode_button_text_size"/>

        <Button
            android:id="@+id/game_quit"
            android:layout_width="@dimen/mode_button_width"
            android:layout_height="@dimen/mode_button_height"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/game_reset"
            android:layout_marginBottom="@dimen/game_btn_margin"
            android:text="@string/quit"
            android:textStyle="bold"
            android:textSize="@dimen/mode_button_text_size"/>

    </RelativeLayout>
    
</RelativeLayout>