<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dugan.tileshade.GameOverActivityFragment">

    <TextView
        android:id="@+id/new_high_score"
        android:text="@string/new_high_score"
        android:textSize="@dimen/final_score_text_size"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/final_score_spacing"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/final_score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_high_score"
        android:layout_margin="@dimen/final_score_spacing"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/final_score_label"
            android:text="@string/final_score_label"
            android:textSize="@dimen/final_score_text_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/scoreboard_spacing"
            android:layout_marginEnd="@dimen/scoreboard_spacing"/>

        <TextView
            android:id="@+id/final_score"
            android:text="@string/final_score_label"
            android:textSize="@dimen/final_score_text_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/final_score_label"
            android:layout_toEndOf="@id/final_score_label"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/high_score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/final_score_view"
        android:layout_margin="@dimen/final_score_spacing"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/high_score_label"
            android:text="@string/high_score_label"
            android:textSize="@dimen/final_score_text_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/scoreboard_spacing"
            android:layout_marginEnd="@dimen/scoreboard_spacing"/>

        <TextView
            android:id="@+id/high_score"
            android:textSize="@dimen/final_score_text_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/high_score_label"
            android:layout_toEndOf="@id/high_score_label"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="@dimen/mode_button_width"
        android:layout_height="@dimen/mode_button_height"
        android:layout_below="@id/high_score_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/final_score_spacing"
        android:text="@string/play_again"
        android:textSize="@dimen/mode_button_text_size"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_main_menu"
        android:layout_width="@dimen/mode_button_width"
        android:layout_height="@dimen/mode_button_height"
        android:layout_below="@id/btn_play_again"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/final_score_spacing"
        android:text="@string/main_menu"
        android:textSize="@dimen/mode_button_text_size"
        android:textStyle="bold"/>

</RelativeLayout>
